z-index added to logo and company name to deal with selection issues

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -53,10 +53,16 @@ header.bk-header {
     background-color: @color-swatch7;
 }
 
-.companyheader {
+.infoheader {
     display: block;
-    float: left;
     padding: 22px 0;
+    z-index:2;
+}
+
+@media @tablet {
+    .infoheader {
+        float:left;
+    }
 }
 
 /* COMPANY NAME */
@@ -99,6 +105,7 @@ footer.bk-footer {
 
 .widget {
     &.extendednavigation {
+        z-index:1;
         .clearfix;
         ul {
             float: right;
